--- a/goit-homework-01/index1.html
+++ b/goit-homework-01/index1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework-2</title>
+    <title>Homework-1</title>
   </head>
   <body>
   <!-- Header -->
@@ -105,11 +105,11 @@
 <section>
   <h2>What Are We Doing</h2>
   <ul>
-   <li><img src="./folder1/img1.jpg" alt="computer" width="360;"></li>
+   <li><img src="./images/img1.jpg" alt="computer" width="360;"></li>
 
-   <li><img src="./folder1/img 2.jpg" alt="Celphone backlight" width="360"></li>
+   <li><img src="./images/img 2.jpg" alt="Celphone backlight" width="360"></li>
   
-   <li><img src="./folder1/img3.jpg" alt="Celphonen view" width="300"></li>
+   <li><img src="./images/img3.jpg" alt="Celphonen view" width="300"></li>
   
 
 </ul>
@@ -153,20 +153,20 @@
     <!-- Inside each <li>, there are some picture -->
         <ul>
             <li>
-                <img src="./folder2/img4.jpg" alt="Mark Guerrero" width="264">
+                <img src="./images/img4.jpg" alt="Mark Guerrero" width="264">
        <h3>Mark guerrero</h3>
        <p>product designer</p>
             </li>
 
-            <li><img src="./folder2/img5.jpg" alt="Tom Ford" width="264px"></li>
+            <li><img src="./images/img5.jpg" alt="Tom Ford" width="264px"></li>
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
 
-            <li><img src="./folder2/img6.jpg" alt="Camila Garcia" width="264"></li>
+            <li><img src="./images/img6.jpg" alt="Camila Garcia" width="264"></li>
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
 
-            <li><img src="./folder2/img7.jpg" alt="Daniel Wilson" width="264"></li>
+            <li><img src="./images/img7.jpg" alt="Daniel Wilson" width="264"></li>
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           
